# Real-Time-Trade-Settlement-for-the-US-Market

./: .env  .gitattributes  .gitignore  README.md  cli.txt
Documents/: points_to_consider.txt  presentation.tex  real_time_trade_settlement.tex
src/: simulation.ipynb
src/backend/: fund_accounts.py  fund_accounts_1.py  fund_accounts_multiple_stocks.py  fund_eth.py  human.py  ml_fraud_detector.py  participants.json  pyproject.toml  setup_participants.py  simulate_trade.py  test.py  trade_agent.py  trade_graph.py  trade_graph2.py  web.py
src/backend/data_and_ML/: dataset.py  feature_importance.csv  feature_scaler.pkl  fraud_detection_model.pkl  ml.ipynb  model_config.json
src/besu-network/: docker-compose.yml  toEncode.json
src/besu-network/node1/: besu.networks  besu.ports  key  key.pub  static-nodes.json  validator-address.txt
src/besu-network/node2/: besu.networks  besu.ports  key  key.pub  validator-address.txt
src/besu-network/node3/: besu.networks  besu.ports  key  key.pub  validator-address.txt
src/besu-network/node4/: besu.networks  besu.ports  key  key.pub  validator-address.txt
src/smart-contracts/: accounts.json  deployed-addresses-1.json  deployed-addresses.json  deployment-info.json  final-deployment-status.json  hardhat.config.js  package-lock.json  package.json
src/smart-contracts/contracts/: AtomicSwap.sol  TokenizedCash.sol  TokenizedSecurity.sol
src/smart-contracts/scripts/: contract_diagonistic.js  contract_inspector.js  deploy-fix.js  deploy-stocks.js  deploy.js  diagonise.js  final_verification.js  generateAccounts.js  test.js  (+6 more)
(+583 files in other folders)
