[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "generativeai>=0.0.1",
    "google-generativeai>=0.8.5",
    "langchain>=0.3.25",
    "langgraph>=0.4.8",
    "pandas>=2.3.0",
    "web3>=7.12.0",
]
